--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,13 @@
       {
         "src": "/(.*)",
         "dest": "a1//wsgi.py"
-      }
+      },
+        {
+  "build": {
+    "env": {
+      "PYTHON_INSTALL_RUNTIME_DEPS": "true"
+    }
+  }
+}
     ]
   }
